--- a/pauper.html
+++ b/pauper.html
@@ -120,10 +120,8 @@
 					<!-- intro -->	
                   <div class="page-content" style="background-color: #F3E9E5;">
                         <div class="one_half " style="margin-top:30px">
-                          <p> testo Poisonous is my <strong>alter ego</strong>.
-Born by the desire to enclose in a box all other kind of works I do that have a different dark soul, a place where I can put all my experimentations.</p>
-                          <p>I’m really fascinated by the world of unreal and imaginative arts. For this reason I have chose to design a logo which was a tiny illustration rich of details, moving away from my geometric comfort zone.</p>
-                          <p>I have think of <em>“Art addict anonymous”</em> as payoff because I’m keen on the idea to create a sort of "call for artists", inviting them to collaborate for creating something unique.</p>
+                          <p> Pauperformance is an online project designed for a niche of players of Magic: The Gathering, the first and most popular trading card game in the world.</p>
+                          <p>The project consists of distinct yet linked parts, spanning multiple websites and community platforms, uniquely characterized by a common set of stylistic traits. </p>
                     </div>
 						
 						
