--- a/confindustria.html
+++ b/confindustria.html
@@ -8,7 +8,7 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />       
+               <link rel="shortcut icon" href="images/fav.png" />           
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400i%7CLato:300,300i,400,400i,700,700i,900%7CMontserrat:900' rel='stylesheet' type='text/css'>	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
