--- a/mildly.html
+++ b/mildly.html
@@ -8,10 +8,10 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />       
+                <link rel="shortcut icon" href="images/fav.png" />              
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400i%7CLato:300,300i,400,400i,700,700i,900%7CMontserrat:900' rel='stylesheet' type='text/css'><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
 		
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
@@ -237,6 +237,7 @@
                   <div class="one margin-0 animate">
 <img src="images/mildly_14.jpg" alt="mildly poisonous_logo | stationary" />
          </div>
+				
  <div class="one_half margin-0 animate">
                           <img src="images/mildly_15.jpg" alt="mildly poisonous_stationary" />
                             </div>
@@ -248,6 +249,10 @@
 			          <a href="https://www.instagram.com/mildlypoisonous/"> <div class="one margin-0 animate">
 <img src="images/mildly_18.jpg" alt="mildly poisonous_logo | stationary" />
          </div></a> 
+				<div class="one ">
+				<video width="1170" height="auto" controls>
+    <source src="images/logo.mp4" type="video/mp4">
+</video></div>
                             <div class="clear"></div>
 
                                 
