--- a/pugliamood.html
+++ b/pugliamood.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
+		
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3XKH4WPBQP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3XKH4WPBQP');
+</script>
+		
         <title>Clelia Rella | Graphic designer &amp; Illustrator </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by CocoBasic" />
